welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: too many arguments for method litMessage: ()String
	if (litMessage(R)) {
                      ^